fvm_dispatch/helper/tests/naming/illegal-chars.stderr
error: proc macro panicked
 --> tests/naming/illegal-chars.rs:5:18
  |
5 |     let _str_hash = method_hash!("Bad!Method!Name!");
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: invalid method name: IllegalName(IllegalCharacters)
